styling: stop scrollbar jiggle

--- a/clients/search-component/src/TrieveModal/index.css
+++ b/clients/search-component/src/TrieveModal/index.css
@@ -316,6 +316,7 @@ body {
     }
 
     .chat-modal-wrapper {
+      scrollbar-gutter: stable;
       .feedback-wrapper {
         @apply tv-flex tv-justify-between tv-my-2;
 
